; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_checkout.c_skip_same_name.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_checkout.c_skip_same_name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }
%struct.cache_entry = type { i32 }

@active_nr = common dso_local global i32 0, align 4
@active_cache = common dso_local global %struct.TYPE_2__** null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.cache_entry*, i32)* @skip_same_name to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @skip_same_name(%struct.cache_entry* %0, i32 %1) #0 {
  %3 = alloca %struct.cache_entry*, align 8
  %4 = alloca i32, align 4
  store %struct.cache_entry* %0, %struct.cache_entry** %3, align 8
  store i32 %1, i32* %4, align 4
  br label %5

5:                                                ; preds = %26, %2
  %6 = load i32, i32* %4, align 4
  %7 = add nsw i32 %6, 1
  store i32 %7, i32* %4, align 4
  %8 = load i32, i32* @active_nr, align 4
  %9 = icmp slt i32 %7, %8
  br i1 %9, label %10, label %24

10:                                               ; preds = %5
  %11 = load %struct.TYPE_2__**, %struct.TYPE_2__*** @active_cache, align 8
  %12 = load i32, i32* %4, align 4
  %13 = sext i32 %12 to i64
  %14 = getelementptr inbounds %struct.TYPE_2__*, %struct.TYPE_2__** %11, i64 %13
  %15 = load %struct.TYPE_2__*, %struct.TYPE_2__** %14, align 8
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = load %struct.cache_entry*, %struct.cache_entry** %3, align 8
  %19 = getelementptr inbounds %struct.cache_entry, %struct.cache_entry* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = call i32 @strcmp(i32 %17, i32 %20)
  %22 = icmp ne i32 %21, 0
  %23 = xor i1 %22, true
  br label %24

24:                                               ; preds = %10, %5
  %25 = phi i1 [ false, %5 ], [ %23, %10 ]
  br i1 %25, label %26, label %27

26:                                               ; preds = %24
  br label %5

27:                                               ; preds = %24
  %28 = load i32, i32* %4, align 4
  ret i32 %28
}

declare dso_local i32 @strcmp(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
